--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Dog Photo Gallery</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1>Dog Photo Gallery</h1>
+    </header>
 </body>
 </html>
